Update and rename index.html.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>MENTAL HEALTH TECHNOLOGY</title>
 </head>
-<body background="C:\Users\Gokul\OneDrive\Desktop\project\project\image\background.jpg" link="#000" alink="#017bf5" vlink="#000" >
+<body background="background.jpg" link="#000" alink="#017bf5" vlink="#000" >
 	<h3 align="center"><font size="10"><font color="white">Mental Health Prediction</font color></font size>
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
